--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,34 +45,34 @@ jobs:
         id: west-zephyr-export
         with:
           args: 'zephyr-export'
-      - name: West Build (Corne Left)
+      - name: West Build (Microdox Left)
         uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-corne-left
+        id: west-build-microdox-left
         with:
-          args: 'build "-s zmk/app -b nice_nano -- -DSHIELD=corne_left -DZMK_CONFIG=/github/workspace/config"'
-      - name: Corne DTS File
+          args: 'build "-s zmk/app -b nice_nano -- -DSHIELD=microdox_left -DZMK_CONFIG=/github/workspace/config"'
+      - name: Microdox DTS File
         if: ${{ always() }}
         run: cat -n build/zephyr/nice_nano.dts.pre.tmp
-      - name: Corne Left Kconfig file
+      - name: Microdox Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 corne_left_nice_nano.uf2
-      - name: Archive (Corne Left)
+        run: cp build/zephyr/zmk.uf2 microdox_left_nice_nano.uf2
+      - name: Archive (Microdox Left)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: corne_left_nice_nano.uf2
-      - name: West Build (Corne Right)
+          path: microdox_left_nice_nano.uf2
+      - name: West Build (Microdox Right)
         uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-corne-right
+        id: west-build-microdox-right
         with:
-          args: 'build "--pristine -s zmk/app -b nice_nano -- -DSHIELD=corne_right -DZMK_CONFIG=/github/workspace/config"'
-      - name: Corne Right Kconfig file
+          args: 'build "--pristine -s zmk/app -b nice_nano -- -DSHIELD=microdox_right -DZMK_CONFIG=/github/workspace/config"'
+      - name: Microdox Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 corne_right_nice_nano.uf2
+        run: cp build/zephyr/zmk.uf2 microdox_right_nice_nano.uf2
       - name: Archive (Corne Right)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: corne_right_nice_nano.uf2
+          path: microdox_right_nice_nano.uf2
