--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -71,8 +71,22 @@ jobs:
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
         run: cp build/zephyr/zmk.uf2 microdox_right_nice_nano.uf2
-      - name: Archive (Corne Right)
+      - name: Archive (Microdox Right)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
           path: microdox_right_nice_nano.uf2
+      - name: West Build (xd75)
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
+        id: west-build-xd75
+        with:
+          args: 'build "--pristine -s zmk/app -b nrfmicro_13 -- -DSHIELD=xd75 -DZMK_CONFIG=/github/workspace/config"'
+      - name: xd75 Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 xd75_nrfmicro_13.uf2
+      - name: Archive (xd75)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: xd75_nrfmicro_13.uf2
