--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -90,3 +90,34 @@ jobs:
         with:
           name: firmware
           path: xd75_nrfmicro_13.uf2
+      - name: West Build (Orthryn Left)
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
+        id: west-build-orthryn-left
+        with:
+          args: 'build "-s zmk/app -b nrfmicro_13 -- -DSHIELD=orthryn_left -DZMK_CONFIG=/github/workspace/config"'
+      - name: Orthryn DTS File
+        if: ${{ always() }}
+        run: cat -n build/zephyr/nrfmicro_13.dts.pre.tmp
+      - name: Orthryn Left Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 orthryn_left_nice_nano.uf2
+      - name: Archive (Orthryn Left)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: orthryn_left_nice_nano.uf2
+      - name: West Build (Orthryn Right)
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
+        id: west-build-orthryn-right
+        with:
+          args: 'build "--pristine -s zmk/app -b nrfmicro_13 -- -DSHIELD=orthryn_right -DZMK_CONFIG=/github/workspace/config"'
+      - name: Orthryn Right Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 orthryn_right_nice_nano.uf2
+      - name: Archive (Orthryn Right)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: orthryn_right_nice_nano.uf2
