--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -101,7 +101,7 @@ jobs:
       - name: Orthryn Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 orthryn_left_nice_nano.uf2
+        run: cp build/zephyr/zmk.uf2 orthryn_left_nrfmicro.uf2
       - name: Archive (Orthryn Left)
         uses: actions/upload-artifact@v2
         with:
@@ -115,7 +115,7 @@ jobs:
       - name: Orthryn Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 orthryn_right_nice_nano.uf2
+        run: cp build/zephyr/zmk.uf2 orthryn_right_nrfmicro.uf2
       - name: Archive (Orthryn Right)
         uses: actions/upload-artifact@v2
         with:
