--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -45,48 +45,35 @@ jobs:
         id: west-zephyr-export
         with:
           args: 'zephyr-export'
-      - name: West Build (Microdox Left)
+      - name: West Build (nRFMicro Microdox Left)
         uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-microdox-left
+        id: west-build-nrfmicro-microdox-left
         with:
-          args: 'build "-s zmk/app -b nice_nano -- -DSHIELD=microdox_left -DZMK_CONFIG=/github/workspace/config"'
+          args: 'build "-s zmk/app -b nrfmicro_13 -- -DSHIELD=microdox_left -DZMK_CONFIG=/github/workspace/config"'
       - name: Microdox DTS File
         if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano.dts.pre.tmp
+        run: cat -n build/zephyr/nrfmicro_13.dts.pre.tmp
       - name: Microdox Left Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 microdox_left_nice_nano.uf2
+        run: cp build/zephyr/zmk.uf2 microdox_left_nrfmicro_13.uf2
       - name: Archive (Microdox Left)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: microdox_left_nice_nano.uf2
-      - name: West Build (Microdox Right)
+          path: microdox_left_nrfmicro_13.uf2
+      - name: West Build (nRFMicro Microdox Right)
         uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-microdox-right
+        id: west-build-nrfmicro-microdox-right
         with:
-          args: 'build "--pristine -s zmk/app -b nice_nano -- -DSHIELD=microdox_right -DZMK_CONFIG=/github/workspace/config"'
+          args: 'build "--pristine -s zmk/app -b nrfmicro_13 -- -DSHIELD=microdox_right -DZMK_CONFIG=/github/workspace/config"'
       - name: Microdox Right Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 microdox_right_nice_nano.uf2
+        run: cp build/zephyr/zmk.uf2 microdox_right_nrfmicro_13.uf2
       - name: Archive (Microdox Right)
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: microdox_right_nice_nano.uf2
-      - name: West Build (xd75)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-xd75
-        with:
-          args: 'build "--pristine -s zmk/app -b nrfmicro_13 -- -DSHIELD=xd75 -DZMK_CONFIG=/github/workspace/config"'
-      - name: xd75 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 xd75_nrfmicro_13.uf2
-      - name: Archive (xd75)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: xd75_nrfmicro_13.uf2
+          path: microdox_right_nrfmicro_13.uf2
+  
