Add hex file for Reviung41

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -85,6 +85,11 @@ jobs:
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
       - name: Rename zmk.uf2
         run: cp build/zephyr/zmk.uf2 reviung41_nrfmicro_13.uf2
+      - name: Archive (reviung41 Hex)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: build/zephyr/zmk.hex
       - name: Archive (reviung41)
         uses: actions/upload-artifact@v2
         with:
