--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -95,6 +95,25 @@ jobs:
         with:
           name: firmware
           path: reviung41_nrfmicro_13.uf2
+      - name: West Build (reviung41-nicenano)
+        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
+        id: west-build-reviung41-nicenano
+        with:
+          args: 'build "--pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=reviung41 -DZMK_CONFIG=/github/workspace/config/boards/shields/reviung41"'
+      - name: reviung41 Kconfig file
+        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
+      - name: Rename zmk.uf2
+        run: cp build/zephyr/zmk.uf2 reviung41_nice_nano_v2.uf2
+      - name: Archive (reviung41 Nicenano Hex)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: build/zephyr/zmk.hex
+      - name: Archive (reviung41)
+        uses: actions/upload-artifact@v2
+        with:
+          name: firmware
+          path: reviung41_nice_nano_v2.uf2
       - name: West Build (xd75)
         uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
         id: west-build-xd75
