--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,10 +3,47 @@ on: [push, pull_request, workflow_dispatch]
 name: Build
 
 jobs:
+  matrix:
+    runs-on: ubuntu-latest
+    name: Fetch Build Keyboards
+    outputs:
+      matrix: ${{ steps.set-matrix.outputs.matrix }}
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      - name: Install yaml2json
+        run: python3 -m pip install remarshal
+      - id: set-matrix
+        name: Fetch Build Matrix
+        run: |
+          matrix=$(yaml2json build.yaml | jq -c .)
+          yaml2json build.yaml
+          echo "::set-output name=matrix::${matrix}"
   build:
     runs-on: ubuntu-latest
-    name: Build Test
+    container:
+      image: zmkfirmware/zmk-build-arm:stable
+    needs: matrix
+    name: Build
+    strategy:
+      fail-fast: false
+      matrix: ${{fromJson(needs.matrix.outputs.matrix)}}
     steps:
+      - name: Prepare variables
+        id: variables
+        run: |
+          if [ -n "${{ matrix.shield }}" ]; then
+            EXTRA_CMAKE_ARGS="-DSHIELD=${{ matrix.shield }}"
+            ARTIFACT_NAME="${{ matrix.shield }}-${{ matrix.board }}-zmk"
+            DISPLAY_NAME="${{ matrix.shield }} - ${{ matrix.board }}"
+          else
+            EXTRA_CMAKE_ARGS=
+            DISPLAY_NAME="${{ matrix.board }}"
+            ARTIFACT_NAME="${{ matrix.board }}-zmk"
+          fi
+          echo ::set-output name=extra-cmake-args::${EXTRA_CMAKE_ARGS}
+          echo ::set-output name=artifact-name::${ARTIFACT_NAME}
+          echo ::set-output name=display-name::${DISPLAY_NAME}
       - name: Checkout
         uses: actions/checkout@v2
       - name: Cache west modules
@@ -26,105 +63,33 @@ jobs:
             ${{ runner.os }}-build-
             ${{ runner.os }}-
       - name: West Init
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-init
-        with:
-          args: 'init "-l config"'
+        run: west init -l config
       - name: West Update
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-update
-        with:
-          args: 'update'
-      - name: West Config Zephyr Base
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-config
-        with:
-          args: 'config "--global zephyr.base-prefer configfile"'
-      - name: West Zephyr Export
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-zephyr-export
-        with:
-          args: 'zephyr-export'
-      - name: West Build (Microdox Left)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-microdox-left
-        with:
-          args: 'build "-s zmk/app -b nice_nano -- -DSHIELD=microdox_left -DZMK_CONFIG=/github/workspace/config"'
-      - name: Microdox DTS File
+        run: west update
+      - name: West Zephyr export
+        run: west zephyr-export
+      - name: West Build (${{ steps.variables.outputs.display-name }})
+        run: |
+          west build -s zmk/app -b ${{ matrix.board }} -- -DZMK_CONFIG=${GITHUB_WORKSPACE}/config ${{ steps.variables.outputs.extra-cmake-args }} ${{ matrix.cmake-args }}
+      - name: ${{ steps.variables.outputs.display-name }} DTS File
         if: ${{ always() }}
-        run: cat -n build/zephyr/nice_nano.dts.pre.tmp
-      - name: Microdox Left Kconfig file
+        run: |
+          if [ -f "build/zephyr/${{ matrix.board }}.dts.pre.tmp" ]; then cat -n build/zephyr/${{ matrix.board }}.dts.pre.tmp; fi
+          if [ -f "build/zephyr/zephyr.dts" ]; then cat -n build/zephyr/zephyr.dts; fi
+      - name: ${{ steps.variables.outputs.display-name }} Kconfig file
         run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 microdox_left_nice_nano.uf2
-      - name: Archive (Microdox Left)
+      - name: Rename artifacts
+        run: |
+          mkdir build/artifacts
+          if [ -f build/zephyr/zmk.uf2 ]
+          then
+            cp build/zephyr/zmk.uf2 "build/artifacts/${{ steps.variables.outputs.artifact-name }}.uf2"
+          elif [ -f build/zephyr/zmk.hex ]
+          then
+            cp build/zephyr/zmk.hex "build/artifacts/${{ steps.variables.outputs.artifact-name }}.hex"
+          fi
+      - name: Archive (${{ steps.variables.outputs.display-name }})
         uses: actions/upload-artifact@v2
         with:
           name: firmware
-          path: microdox_left_nice_nano.uf2
-      - name: West Build (Microdox Right)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-microdox-right
-        with:
-          args: 'build "--pristine -s zmk/app -b nice_nano -- -DSHIELD=microdox_right -DZMK_CONFIG=/github/workspace/config"'
-      - name: Microdox Right Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 microdox_right_nice_nano.uf2
-      - name: Archive (Microdox Right)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: microdox_right_nice_nano.uf2
-      - name: West Build (reviung41)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-reviung41
-        with:
-          args: 'build "--pristine -s zmk/app -b nrfmicro_13 -- -DSHIELD=reviung41 -DZMK_CONFIG=/github/workspace/config/boards/shields/reviung41"'
-      - name: reviung41 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 reviung41_nrfmicro_13.uf2
-      - name: Archive (reviung41 Hex)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: build/zephyr/zmk.hex
-      - name: Archive (reviung41)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: reviung41_nrfmicro_13.uf2
-      - name: West Build (reviung41-nicenano)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-reviung41-nicenano
-        with:
-          args: 'build "--pristine -s zmk/app -b nice_nano_v2 -- -DSHIELD=reviung41 -DZMK_CONFIG=/github/workspace/config/boards/shields/reviung41"'
-      - name: reviung41 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 reviung41_nice_nano_v2.uf2
-      - name: Archive (reviung41 Nicenano Hex)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: build/zephyr/zmk.hex
-      - name: Archive (reviung41)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: reviung41_nice_nano_v2.uf2
-      - name: West Build (xd75)
-        uses: 'docker://zmkfirmware/zephyr-west-action-arm:latest'
-        id: west-build-xd75
-        with:
-          args: 'build "--pristine -s zmk/app -b nrfmicro_13 -- -DSHIELD=xd75 -DZMK_CONFIG=/github/workspace/config"'
-      - name: xd75 Kconfig file
-        run: cat build/zephyr/.config | grep -v "^#" | grep -v "^$"
-      - name: Rename zmk.uf2
-        run: cp build/zephyr/zmk.uf2 xd75_nrfmicro_13.uf2
-      - name: Archive (xd75)
-        uses: actions/upload-artifact@v2
-        with:
-          name: firmware
-          path: xd75_nrfmicro_13.uf2
+          path: build/artifacts
